--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -1,7 +1,7 @@
 ---
 title: "GSS challange More Data"
-author: "Put your name here!"
-date: "put the date here"
+author: "Tom Weadock"
+date: "March 14, 2023"
 output: html_document
 ---
 
