--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -1,7 +1,7 @@
 ---
 title: "GSS challange Less Data"
-author: "Put your name here!"
-date: "put the date here"
+author: "Tom Weadock"
+date: "March 14, 2023"
 output: html_document
 ---
 
@@ -47,17 +47,25 @@ If not, then whose view differs from whom??
 
 ## Now with LESS data (more variables give less data due to NA's) create the approate graphic displays to answer the question.
 
+```{r}
+barchartGC(~race + cappun,data=mydata)
+barchartGC(~race + cappun,data=mydata, type="percent")
 
+```
 
-
+The charts indicate more whites favor capital punishment, more blacks oppose, and more other favor.
 
 ### Numerical Descriptive Results
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
+```{r}
+table1 <- xtabs(~race + cappun,data=mydata)
+rowPerc(table1)
+colPerc(table1)
+```
 
-
-
+The numerical results also indicates that more whites favor, more blas oppose, and more other races favor capital punishment.
 
 
 ## Inferential Results
@@ -65,8 +73,11 @@ If not, then whose view differs from whom??
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
 `
+```{r}
+fisherXY(mydata$race,mydata$cappun)
+```
 
-
+The Fisher XY test shows that the only significant difference in opinion regarding capital punishment is between black and white.
 
 # Discussion and Conclusion
 
